--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 Flask==0.9
+Flask-Assets==0.9
 Flask-KVSession==0.3.2
+Flask-Script==0.6.7
 Jinja2==2.6
 Werkzeug==0.8.3
 google-api-python-client==1.1
 httplib2==0.8
 itsdangerous==0.17
+pyOpenSSL==0.13.1
 python-gflags==2.0
-simplekv==0.5
+redis==2.9.1
+simplekv==0.8.4
+six==1.6.1
+webassets==0.9
 wsgiref==0.1.2
-pyopenssl==0.13.1
